--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
+    "@types/rimraf": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
     "multer": "^1.4.3",
+    "rimraf": "^3.0.2",
     "tslint": "^6.1.3",
     "validation": "0.0.1"
   },
