--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
+        "rootDir": "src",
         "outDir": "dist",
         "baseUrl": ".",
         "paths": {
@@ -17,5 +18,8 @@
     },
     "include": [
         "src/**/*"
+    ],
+    "exclude": [
+      "node_modules"
     ]
 }
